Fixed white space

--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -17,6 +17,7 @@
 .wrap {
   overflow-x: hidden;
   position: relative;
+  min-height: calc(100vh - 400px);
 }
 
 h2 {
